--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -1,7 +1,71 @@
-$base_color: #c6538c;
-$color: rgba(black, 0.88);
+//Color Project
+
+$color-primary: hsl(172, 67%, 45%);
+$color-neutral-dark: hsl(183, 100%, 15%);
+$color-neutral-dark-one: hsl(186, 14%, 43%);
+$color-neutral-dark-two: hsl(184, 14%, 56%);
+$color-neutral-light: hsl(185, 41%, 84%);
+$color-neutral-light-one: hsl(189, 41%, 97%);
+$white: hsl(0, 0%, 100%);
+
+//fonts
+@import url('https://fonts.googleapis.com/css2?family=Space+Mono&display=swap');
+
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
 
 body {
-  background-color: $base_color;
-  color: $color;
+  max-width: 1440px;
+  margin: 0 auto;
+  background-color: $color-neutral-light;
+  font-family: 'Space Mono', monospace;
+  color: $color-neutral-dark;
+}
+
+.input {
+  label {
+    display: flex;
+    flex-direction: column;
+  }
+  &__title {
+    font-weight: 600;
+    margin-bottom: 15px;
+  }
+  div {
+    display: flex;
+    align-items: center;
+    padding-left: 10px;
+    border-radius: 10px;
+    background: $color-neutral-light-one;
+    color: $color-neutral-dark-two;
+    font-size: 20px;
+    font-weight: 500;
+  }
+  &__into {
+    width: 100%;
+    height: 40px;
+    background: $color-neutral-light-one;
+    font-size: 18px;
+    font-weight: 700;
+    color: $color-neutral-dark;
+    outline: none;
+    border: none;
+    text-align: right;
+    border-radius: 10px;
+  }
+  &__into::placeholder {
+    color: $color-neutral-dark-two;
+    font-size: 18px;
+    padding: 10px;
+  }
+  div:active{
+    border: 3px solid $color-primary;
+  }
+ 
+
+
 }
