--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -30,17 +30,17 @@ body {
   justify-content: center;
   h1 {
     text-align: center;
-    font-size: 22px;
+    font-size: 20px;
     letter-spacing: 10px;
-    padding-bottom: 50px;
+    padding-bottom: 70px;
   }
 }
 
 .container {
-  width: 800px;
+  width: 750px;
   height: auto;
   background-color: $white;
-  padding: 20px;
+  padding: 30px;
   border-radius: 25px;
   &__content {
     display: flex;
@@ -51,10 +51,13 @@ body {
       padding: 10px;
     }
     &--right {
+      display: flex;
+      flex-direction: column;
+      justify-content: space-between;
       width: 100%;
       border-radius: 15px;
       background-color: $color-neutral-dark;
-      padding: 10px;
+      padding: 30px;
       div p {
         color: $white;
       }
@@ -63,6 +66,18 @@ body {
         font-size: 12px;
       }
     }
+  }
+  &__text {
+    font-family: $font;
+    font-weight: 700;
+    padding-bottom: 15px;
+    padding-top: 30px;
+  }
+  &__btn {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    gap: 5px;
+    padding-bottom: 25px;
   }
 
 }
@@ -111,7 +126,7 @@ body {
 
 .btn {
   background-color: $color-neutral-dark;
-  width: 120px;
+  width: 100%;
   height: 40px;
   color: $white;
   font-size: 18px;
